--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,197 @@ p{
     color:blue;
 }
 h2{
-    color:rgb(210, 105, 30);
+    color:rgb(22, 22, 22);
+}  */
+
+body,ul,li,h1,h2,a{
+    padding:0;
+    margin:0;
+    font-family: Arial;
+}
+header{
+    background-color: black;
+    color:#feb16f;
+    padding:20px;
+    text-align: center;
+    position: fixed;
+    width:100%;
+    z-index:1;/* used to push back/front +ve-front,-ve-back ki push*/
+    top:0;
+    left:0;
+}
+
+header h1{
+color:#feb16f;
+padding:6px 12px;
+border:8px solid white;
+display: inline-block;
+border-radius :36px;
+}
+
+.banner{
+    position:relative;
+}
+
+.banner img{
+    max-width: 100%;
+}
+
+.banner div{
+    background-color: #feb614;
+    color:black;
+    position:absolute;
+    padding:30px;
+    left:0px;
+    top:30%;
+
+}
+.banner h2{
+    font-size:74px;
+}
+
+.banner h2 span{
+    font-size:1.3em;/*1.3 times the parent(h2 is  parent here*/
+}
+
+nav{
+    background-color: #f4f4f4;
+    padding: 20px;
+    position: sticky;
+    top: 105px;/*till 148px from top it is absolute and from then it is fixed*/
+
+}
+
+nav ul{
+    white-space: nowrap;/*not gng to enter into next line*/
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+nav li{
+    width:25%;
+    display: inline-block;
+    font-size: 24px;
+}
+
+nav li a{
+    text-decoration: none;
+    color: #4b4b4b;
+}
+nav li a.join{
+    color:#feb16f;
+}
+
+main{
+    max-width: 100%;
+    width:1200px;
+    margin:80px auto;/*auto for left and right,80px for top and botoom*/
+    padding:0 40px;
+    box-sizing:border-box;/*that padding must be included in max-width*/
+
+}
+
+article h2{
+    color:#685722;
+    font-size: 48px;
+}
+
+article p{
+    line-height: 1.6em;/*vertical space betwwm to lines*/
+    color:#4b4b4b;
+}
+
+.images{
+    text-align: center;
+    margin: 80px 0;
+    white-space: nowrap;
+}
+
+.images li{
+    display: inline-block;
+    width:40%;
+    margin:20px 5%;
+}
+
+.images li img{
+    max-width: 100%;
+}
+
+.join{
+    background-color: #f4f4f4;
+    text-align: center;
+    padding :0 20px;
+    color:#4b4b4b;
+}
+
+.join h2{
+    font-size: 36px;
+}
+
+form input{
+    margin:20px 0;
+    padding:0 20px;
+    font-size: 24px;
+    border-radius: 28px;
+    border: 4px solid white;
+}
+
+footer{
+    background: #463232;
+    color: #f4f4f4;
+    padding:10px;
+    text-align: center;
+    width: 100%;
+    top:0;
+    left:0;
+}
+
+/*pseduo classes*/
+nav li a:hover{
+    text-decoration: underline;
+}
+
+.images li:hover{
+    position:relative;
+    top:-4px;
+}
+
+form input:focus{
+    border: 4px solid red;
+    outline: none;
+}
+
+form input:valid{
+    border:4px solid #71d300;
+}
+
+/* nav li:first-child{
+    border: 3px solid red;
 } */
+
+/*responsive styles*/
+
+@media only screen and (max-width: 1000px) {
+
+    .banner h2{
+      font-size: 40px;
+    
+    }
+
+nav li{
+    font-size: 10px;
+}
+}
+
+@media only screen and (max-width: 700px) {
+
+    .banner h2{
+      position: relative;
+      text-align: center;
+    }
+
+    .banner h2 br{
+        display: none;/*br is not applying*/
+    }
+
+}
